syntax = "proto3";

enum UserNameType {
  USERNAME_TYPE_NONE = 0;
  USERNAME_TYPE_FNAME = 1;
}

message UserNameProof {
  uint32 timestamp = 1;
  bytes name = 2;
  bytes owner = 3;
  bytes signature = 4;
  UserNameType type = 5;
}